spacing on iphone 10 fixed

--- a/assets/scss/pages/web-responsive.scss
+++ b/assets/scss/pages/web-responsive.scss
@@ -1269,7 +1269,7 @@
   }
 
   @media(max-width: 599px) {
-    margin-top: 23vh;
+    margin-top: 26vh;
 
     .decoration-element-wizard {
       display: none !important;
